[package]
name = "mipidsi-async"
description = "MIPI Display Command Set compatible generic driver async version"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.75"

[dependencies]
display-interface = "0.5.0"
embedded-graphics-core = { git = "https://github.com/ValouBambou/embedded-graphics", features = [
    "async_draw",
] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
nb = "1.0.0"

[dependencies.heapless]
optional = true
version = "0.7.16"

[dev-dependencies]
embedded-graphics = "0.8.0"
display-interface-spi = "0.5.0"
display-interface-parallel-gpio = "0.7.0"

[features]
default = ["batch"]
batch = ["heapless"]
